--- a/src/Dockerfile_heroku
+++ b/src/Dockerfile_heroku
@@ -10,7 +10,7 @@ RUN apt-get update && \
 RUN pip install uwsgi
 
 #RUN mkdir -p /srv
-ADD ./src /srv
+ADD . /srv
 WORKDIR /srv
 
 # Run the image as a non-root user
