--- a/heroku.yml
+++ b/heroku.yml
@@ -3,10 +3,8 @@ build:
     bot: src/Dockerfile_heroku
 run:
   bot:
-    command:
-      - python -m srv.bot
+    command: python -m srv.bot
     image: bot
   hook_catcher:
-    command:
-      - uwsgi --http :$PORT --module srv.web:app
+    command: uwsgi --module srv.web:app
     image: bot
