Telegram webhooks mode added to heroku

--- a/.env.default
+++ b/.env.default
@@ -2,3 +2,5 @@ SCRAPINGHUB_API_KEY=api_key
 SCRAPINGHUB_PROJECT_ID=project_id
 TELEGRAM_API_TOKEN=123:SeCrEtToKen
 WILDSEARCH_JOB_FINISHED_CALLBACK=http://localhost:8000/callback
+WILDSEARCH_WEBHOOKS_DOMAIN=http://localhost:8000
+WILDSEARCH_USE_WEBHOOKS=false
