--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   bot:
     build: ./src
     restart: always
-    command: python -m srv.bot
+    command: python -m srv.app
     volumes:
       - ./src:/srv:delegated
     env_file:
