--- a/.env.default
+++ b/.env.default
@@ -1,6 +1,10 @@
 SCRAPINGHUB_API_KEY=api_key
 SCRAPINGHUB_PROJECT_ID=project_id
+
 TELEGRAM_API_TOKEN=123:SeCrEtToKen
+
 WILDSEARCH_JOB_FINISHED_CALLBACK=http://localhost:8000/callback
 WILDSEARCH_WEBHOOKS_DOMAIN=http://localhost:8000
-WILDSEARCH_USE_WEBHOOKS=false
+WILDSEARCH_TEST_USER_LIST=123,321
+
+SENTRY_DSN=https://abcdef@sentry.io/12345
