--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,6 @@
+setup:
+  addons:
+    - plan: heroku-redis
 build:
   docker:
     bot: src/Dockerfile_heroku
@@ -5,4 +8,8 @@ run:
   web:
     command:
       - uwsgi --http 0:$PORT --module srv.web:app --master --processes 4 --threads 2
+    image: bot
+  worker:
+    command:
+      - celery -A srv.tasks worker
     image: bot
