--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 defaults: &defaults
   docker:
-    - image: circleci/python:3.8-stretch
+    - image: circleci/python:3.8-buster
 
 jobs:
   build:
