--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             - v1-dependencies-
 
       - run:
-          name: install dependencies
+          name: Install dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
@@ -39,6 +39,7 @@ jobs:
 
       - run:
           command: |
+            python3 -m venv venv
             . venv/bin/activate
             py.test -x
 
