--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,9 +8,11 @@ envparse==0.2.0
 sentry-sdk==0.13.5
 msgpack==0.6.1
 pytest==5.3.2
+pytest-cov
 mixer==6.1.3
 Faker==0.9.1
 celery==4.4.0
 flower==0.9.3
 redis==3.3.11
 boto3==1.11.0
+coverage==5.0.3
