--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pytest --cov=./
+            pytest --cov-report=xml --cov=src tests/
 
   deploy:
     executor: heroku/default # Uses the basic buildpack-deps image, which has the prerequisites for installing heroku's CLI.
