Updated default env file, added missing keys

--- a/.env.default
+++ b/.env.default
@@ -1,4 +1,5 @@
-CELERY_BROKER_URL=redis://redis:6379
+REDIS_URL=redis://redis:6379
+MONGODB_URI=
 
 SCRAPINGHUB_API_KEY=api_key
 SCRAPINGHUB_PROJECT_ID=project_id
@@ -10,3 +11,7 @@ WILDSEARCH_WEBHOOKS_DOMAIN=http://localhost:8000
 WILDSEARCH_TEST_USER_LIST=123,321
 
 SENTRY_DSN=https://abcdef@sentry.io/12345
+
+AWS_ACCESS_KEY_ID=AKKC3CCKE1
+AWS_SECRET_ACCESS_KEY=secretaccesskey
+AWS_S3_BUCKET_NAME=my-shiny-bucket
