--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   web:
     build: ./src
     restart: always
-    command: uwsgi --http :8000 --module srv.web:app --workers 2 --threads 2
+    command: uwsgi --http :8000 --module srv.web:app --workers 1 --threads 1
     volumes:
       - ./src:/srv:delegated
     env_file:
@@ -13,6 +13,9 @@ services:
       - mongo
     ports:
       - 80:8000
+    depends_on:
+      - worker
+      - mongo
 
   worker:
     build: ./src
@@ -27,6 +30,9 @@ services:
     links:
       - redis
       - mongo
+    depends_on:
+      - mongo
+      - redis
 
   flower:
     build: ./src
@@ -54,13 +60,13 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./docker-configs/mongodb/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./infra/mongodb/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
   # Зачем в этой схеме нужен Nginx я пока не решил
   #nginx:
   #  image: nginx:1.13-alpine
   #  volumes:
-  #    - ./docker-configs/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #    - ./infra/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
   #  depends_on:
   #    - hook_catcher
   #  ports:
