--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -20,3 +20,8 @@ codecov
 mongoengine==0.19.1
 mongomock==3.18.0
 freezegun==0.3.14
+flake8==3.7.9
+flake8-bugbear==20.1.4
+flake8-commas==2.0.0
+flake8-isort==2.8.0
+flake8-print==3.1.4
