Deploy now requires unittests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,5 +70,6 @@ workflows:
       - unittest:
           requires:
             - build
-
-      - deploy
+      - deploy:
+          requires:
+            - unittest
