--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -7,21 +7,38 @@ pandas==0.25.3
 envparse==0.2.0
 sentry-sdk==0.13.5
 msgpack==0.6.1
+
+celery==4.4.0
+flower==0.9.3
+mongoengine==0.19.1
+redis==3.3.11
+boto3==1.11.0
+
 pytest==5.3.2
 pytest-cov
 mixer==6.1.3
-Faker==0.9.1
-celery==4.4.0
-flower==0.9.3
-redis==3.3.11
-boto3==1.11.0
 coverage==5.0.3
 codecov
-mongoengine==0.19.1
-mongomock==3.18.0
 freezegun==0.3.14
+mongomock==3.18.0
+Faker==0.9.1
+
+typing==3.7.4.1
+typing-extensions==3.7.4.1
+
 flake8==3.7.9
 flake8-bugbear==20.1.4
 flake8-commas==2.0.0
 flake8-isort==2.8.0
 flake8-print==3.1.4
+flake8-blind-except==0.1.1
+flake8-builtins==1.4.2
+flake8-comprehensions==3.2.2
+flake8-debugger==3.2.1
+flake8-docstrings==1.5.0
+flake8-polyfill==1.0.2
+flake8-quotes==2.1.1
+flake8-todo==0.7
+flake8-annotations-complexity==0.0.2
+flake8-variables-names==0.0.3
+flake8-broken-line==0.1.1
