--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,27 +1,29 @@
-python-telegram-bot==12.2.0
-openpyxl==3.0.1
-scrapinghub==2.3.0
+python-telegram-bot==12.4.2
 falcon==2.0.0
+
+scrapinghub==2.3.0
+sentry-sdk==0.14.1
+
+openpyxl==3.0.3
 PyYAML==5.3
-pandas==0.25.3
+pandas==1.0.1
 envparse==0.2.0
-sentry-sdk==0.13.5
 msgpack==0.6.1
 
 celery==4.4.0
 flower==0.9.3
 mongoengine==0.19.1
-redis==3.3.11
-boto3==1.11.0
+redis==3.4.1
+boto3==1.12.2
 
-pytest==5.3.2
-pytest-cov
+pytest==5.3.5
+pytest-cov==2.8.1
 mixer==6.1.3
 coverage==5.0.3
-codecov
-freezegun==0.3.14
-mongomock==3.18.0
-Faker==0.9.1
+codecov==2.0.15
+freezegun==0.3.15
+mongomock==3.19.0
+Faker==4.0.1
 
 typing==3.7.4.1
 typing-extensions==3.7.4.1
