--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,12 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "src/requirements.txt" }}
 
+      - run:
+          name: Run Flake8
+          command: |
+            . venv/bin/activate
+            cd src && flake8
+
       - persist_to_workspace:
           root: .
           paths:
