--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pytest --cov-report=xml --cov=src tests/
+            pytest --cov-report=xml --cov=src tests/ --junitxml=test-results/pytest/results.xml
             codecov
 
       - store_test_results:
