Added max connections option for celery's redis

--- a/.env.default
+++ b/.env.default
@@ -15,3 +15,5 @@ SENTRY_DSN=https://abcdef@sentry.io/12345
 AWS_ACCESS_KEY_ID=AKKC3CCKE1
 AWS_SECRET_ACCESS_KEY=secretaccesskey
 AWS_S3_BUCKET_NAME=my-shiny-bucket
+
+CELERY_REDIS_MAX_CONNECTIONS=max_connections
