Added datadog integration library

--- a/.env.default
+++ b/.env.default
@@ -17,3 +17,7 @@ AWS_SECRET_ACCESS_KEY=secretaccesskey
 AWS_S3_BUCKET_NAME=my-shiny-bucket
 
 CELERY_REDIS_MAX_CONNECTIONS=max_connections
+
+DD_AGENT_MAJOR_VERSION=7
+DD_API_KEY=datadog_api_key
+DD_SITE="datadoghq.eu"
