--- a/src/Dockerfile_heroku
+++ b/src/Dockerfile_heroku
@@ -1,5 +1,7 @@
 FROM python:3.8-slim
 
+RUN curl -L https://raw.githubusercontent.com/DataDog/datadog-agent/master/cmd/agent/install_script.sh
+
 COPY requirements.txt ./
 
 RUN pip install --no-cache-dir -r requirements.txt
