--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -5,9 +5,7 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN apt-get update && \
-  apt-get --no-install-recommends --assume-yes install build-essential curl
-
-#RUN curl -L https://raw.githubusercontent.com/DataDog/datadog-agent/master/cmd/agent/install_script.sh
+  apt-get --no-install-recommends --assume-yes install build-essential
 
 RUN pip install uwsgi
 
