Added config for queued requests limit, altered error text when it is reached

--- a/.env.default
+++ b/.env.default
@@ -21,3 +21,5 @@ CELERY_REDIS_MAX_CONNECTIONS=max_connections
 DD_AGENT_MAJOR_VERSION=7
 DD_API_KEY=datadog_api_key
 DD_SITE="datadoghq.eu"
+
+SCHEDULED_JOBS_THRESHOLD=1  # лимит задач на выгрузку в очереди, после достижения которого пользователю вернется ошибка
