--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -25,6 +25,7 @@ codecov==2.0.15
 freezegun==0.3.15
 mongomock==3.19.0
 Faker==4.0.1
+requests_mock==1.7.0
 
 typing==3.7.4.1
 typing-extensions==3.7.4.1
