Added amplitude event tracking

--- a/.env.default
+++ b/.env.default
@@ -11,6 +11,7 @@ WILDSEARCH_WEBHOOKS_DOMAIN=http://localhost:8000
 WILDSEARCH_TEST_USER_LIST=123,321
 
 SENTRY_DSN=https://abcdef@sentry.io/12345
+AMPLITUDE_API_KEY=api_key
 
 AWS_ACCESS_KEY_ID=AKKC3CCKE1
 AWS_SECRET_ACCESS_KEY=secretaccesskey
