--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.8-slim
 
 COPY requirements.txt ./
 
+RUN apt-get update && apt-get --assume-yes install git
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN apt-get update && \
