Catalog export procedure now universal

--- a/.env.default
+++ b/.env.default
@@ -3,6 +3,8 @@ MONGODB_URI=
 
 SH_APIKEY=scrapinghub_api_key
 SH_PROJECT_ID=scrapinghub_project_id
+SH_WB_SPIDER=1
+SH_OZON_SPIDER=2
 
 TELEGRAM_API_TOKEN=123:SeCrEtToKen
 
