--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,12 +12,14 @@ pandas==1.0.4
 envparse==0.2.0
 msgpack==1.0.0
 json_log_formatter==0.3.0
+python-dateutil==2.8.1
 
 celery==4.4.5
 flower==0.9.4
 mongoengine==0.20.0
 redis==3.5.3
 boto3==1.13.16
+Jinja2==2.11.2
 
 pytest==5.4.3
 pytest-cov==2.9.0
