--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -23,6 +23,7 @@ Jinja2==2.11.2
 WeasyPrint
 airtable-python-wrapper==0.15.0
 peewee==3.13.3
+psycopg2-binary==2.8.6
 
 pytest==6.1.1
 pytest-cov==2.10.1
