--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -20,7 +20,7 @@ mongoengine==0.20.0
 redis==3.5.3
 boto3==1.16.9
 Jinja2==2.11.2
-WeasyPrint
+WeasyPrint==52.1
 airtable-python-wrapper==0.15.1
 peewee==3.13.3
 psycopg2-binary==2.8.6
